[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/FeatsScene.gd" type="Script" id=1]
[ext_resource path="res://Effects/HaloEffect.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Bat_for_feat.png" type="Texture" id=3]
[ext_resource path="res://UI/HeartUIFull.png" type="Texture" id=5]
[ext_resource path="res://UI/cursor.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 67 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 67 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 67 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 67 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 67 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Animate",
"speed": 7.0
} ]

[node name="FeatsScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 8.0
text = "On your journey..."
align = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 12.0
margin_right = 200.0
margin_bottom = 20.0
text = "You have killed:"
align = 1

[node name="Container" type="Control" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 200.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 50 )

[node name="Number" type="Label" parent="VBoxContainer/Container"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -4.0
margin_right = -38.0
margin_bottom = 4.0
rect_scale = Vector2( 2, 2 )
text = "aa"
valign = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="VBoxContainer/Container"]
position = Vector2( 89, 29 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 6 )
animation = "Animate"
frame = 3
playing = true

[node name="Sprite" type="Sprite" parent="VBoxContainer/Container/AnimatedSprite"]
modulate = Color( 0.898039, 1, 0, 1 )
position = Vector2( 4.00012, -24.0004 )
scale = Vector2( 0.24, 0.12 )
texture = ExtResource( 2 )

[node name="Label4" type="Label" parent="VBoxContainer"]
margin_top = 78.0
margin_right = 200.0
margin_bottom = 86.0
text = "Your highest wave has been:"
align = 1

[node name="Container2" type="Control" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 200.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 50 )

[node name="Sprite" type="Sprite" parent="VBoxContainer/Container2"]
position = Vector2( 89, 27 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 6 )

[node name="Sprite2" type="Sprite" parent="VBoxContainer/Container2"]
position = Vector2( 81, 31 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="Wave" type="Label" parent="VBoxContainer/Container2"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -4.0
margin_right = -34.0
margin_bottom = 4.0
rect_scale = Vector2( 2, 2 )
text = "aa"
valign = 1

[node name="FeatsBackButton" type="Button" parent="VBoxContainer"]
margin_left = 89.0
margin_top = 144.0
margin_right = 111.0
margin_bottom = 158.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back"

[connection signal="pressed" from="VBoxContainer/FeatsBackButton" to="." method="_on_FeatsBackButton_pressed"]
